* Zoomedia now properly resizes a zoom box to the viewport height when needed, and gets rid of the description to save space. (zoomedia.js) * The aelink class is no longer a class for links but for the link container in item descriptions. Cleaner this way. (Subs-Media.php, media.css) * Avatar selection code was too big when it could be done in 5 lines. Uh. (Profile.template.php) * Server-based avatar selection box was too large. Now it should be better integrated. (Profile.template.php)

--- a/Themes/default/styles/media.css
+++ b/Themes/default/styles/media.css
@@ -462,6 +462,9 @@ table.aelista
 		opacity: 1
 		transition: opacity .5s
 
+.aelink
+	float: right
+
 .pics
 	margin: auto
 
